# action-task-definition-otel-sidecar

./: README.md  action.yaml
.github/workflows/: ci.yml  example-workflow.yml
example/: task-definition.json
src/: .gitignore  action.py  pyproject.toml  updated-task-definition.json
src/sidecar/: __init__.py  sidecar.py
src/tests/: test_sidecar.py
