[project]
name = "my_first_python_action"
version = "0.0.1"
authors = [{ name = "Karel Bemelmans", email = "info@karelbemelmans.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"    # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
