[project]
name = "my_first_python_action"
version = "0.0.1"
authors = [{ name = "Karel Bemelmans", email = "info@karelbemelmans.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
black = "^24.10.0"
